All application collections are unmodifiable (#73)
* Collections are unmodifiable
Resolves Inconsistent behaviour of query/getter methods regarding immutability #72

* Fixes due to review